--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ html{
 }
 
 body{
-	background-color: #606068;
+	background-color: #000;
 	margin:0;
 	padding:0;
 }
@@ -34,6 +34,7 @@ h2{
 h3{
 	margin-bottom: 5px;
 	margin-top: 0px;
+	padding: 0 30px;
 }
 
 section{
@@ -48,6 +49,7 @@ section{
 p{
 	line-height: 160%;
 	margin-top: 0px;
+	padding: 0 30px;
 }
 
 img{
@@ -162,12 +164,12 @@ img.displayed{
 
 .white-bg{
 	background-color: #fff;
-	padding: 30px;
+	padding: 30px 0;
 }
 
 .black-bg{
 	background-color: #000;
-	padding: 30px;
+	padding: 30px 0;
 }
 
 /*------------ Vimeo/YouTube container styles ------------*/
